main page generates dynamically with db data. Fixed some spacing issues. Still needs cosmetic tweaks.
Summary: mostly front-end changes

Test Plan: will need integration tests eventually

Reviewers: zacleids, code-ee

Subscribers:

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -1,12 +1,8 @@
-#1 {
-    position:relative;
-}
-
-#cirlce {
-    position:absolute;
+#rating_color {
+    position: absolute;
     width:25px;
     height:25px;
-    border-radius:25px;
+    border-radius: 50%;
     top:1px;
     left:13px;
 }
@@ -24,8 +20,24 @@
     width: 500px;
 }
 
-img {
+#cover {
     max-height: 150px;
     height: 100%;
     width: auto;
+    position:relative;
+}
+
+#special {
+    position:absolute;
+    width:25px;
+    height:25px;
+    border-radius: 50%;
+    top:1px;
+    left:13px;
+    background-color:red;
+}
+
+#main {
+    padding-top:70px;
+    padding-bottom:70px;
 }
